<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Readdit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--General-->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!--Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_myreviews">My Reviews</string>
    <string name="menu_profile">Profile</string>

    <!--Sign In/Up-->
    <string name="email_field">Email*</string>
    <string name="password_field">Password*</string>
    <string name="full_name_field">Full Name*</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_register">Register</string>
    <string name="or">or</string>
    <string name="sign_in_error">Username or password is incorrect</string>

    <!--Sign Out-->
    <string name="action_sign_out">Sign Out</string>

    <!--Profile-->
    <string name="change_password">Change password</string>
    <string name="edit_info">Edit info</string>
    <string name="delete_account">Delete account</string>
    <string name="old_password">Old password*</string>
    <string name="new_password">New password*</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>